// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentitySlide should enable editing the identity name 1`] = `
<div>
  <section
    class="container"
  >
    <div
      class="avatar"
    >
      Identicon
    </div>
    <form
      class="form"
    >
      <input
        aria-label="Identity name:"
        autocomplete="off"
        class="input"
        name="name"
        placeholder="Identity name:"
        required=""
        value="Light DID Identity"
      />
      <button
        aria-label="Save"
        class="save"
        title="Save"
        type="submit"
      />
      <button
        aria-label="Cancel"
        class="cancel"
        title="Cancel"
        type="button"
      />
    </form>
  </section>
</div>
`;

exports[`IdentitySlide should enable editing the identity name 2`] = `
<div>
  <section
    class="container"
  >
    <div
      class="avatar"
    >
      Identicon
    </div>
    <div
      class="nameLine"
    >
      <span
        class="name"
      >
        Light DID Identity
      </span>
      <div
        class="wrapper"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Identity options"
          class="toggle"
          role="button"
          tabindex="0"
          title="Identity options"
          type="button"
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`IdentitySlide should render 1`] = `
<div>
  <section
    class="container"
  >
    <div
      class="avatar"
    >
      Identicon
    </div>
    <div
      class="centeredNameLine"
    >
      <span
        class="name"
      >
        Light DID Identity
      </span>
    </div>
  </section>
</div>
`;

exports[`IdentitySlideNew should render 1`] = `
<div>
  <section>
    <a
      aria-label="Add Identity"
      class="add"
      href="/identity/add"
      title="Add Identity"
    />
  </section>
</div>
`;
